--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -69,7 +69,7 @@ jobs:
         run: yarn lint
 
       - name: "🔨 Build"
-        run: yarn build && node sonar-args.js
+        run: yarn build --force && node sonar-args.js
 
       - name: "👨‍💻 Run Test"
         run: yarn test
