--- a/package.json
+++ b/package.json
@@ -81,14 +81,14 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
+    "@babel/core": "^7.20.12",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@babel/plugin-proposal-decorators": "^7.20.13",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@babel/preset-typescript": "^7.21.0",
-    "@commitlint/cli": "^17.5.0",
-    "@commitlint/config-conventional": "^17.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.20.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@elastic/elasticsearch-mock": "^2.0.0",
     "@nestjs/cli": "^9.1.9",
     "@nestjs/schematics": "^9.0.4",
@@ -100,42 +100,42 @@
     "@pika/plugin-standard-pkg": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "@types/camunda-external-task-client-js": "^1.3.3",
-    "@types/ejs": "^3.1.2",
+    "@types/ejs": "^3.1.1",
     "@types/elasticsearch": "^5.0.40",
     "@types/express": "^4.17.17",
-    "@types/glob": "^8.1.0",
+    "@types/glob": "^8.0.1",
     "@types/inline-css": "^3.0.1",
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.2.6",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.15.9",
+    "@types/node": "~18.15.5",
     "@types/nodemailer": "^6.4.4",
     "@types/pug": "^2.0.6",
     "@types/supertest": "^2.0.11",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
-    "jest-extended": "^3.2.4",
-    "jest-mock-extended": "^3.0.4",
+    "jest": "^29.4.0",
+    "jest-extended": "^3.2.3",
+    "jest-mock-extended": "^3.0.1",
     "jest-sonar-reporter": "^2.0.0",
     "lerna": "^4.0.0",
-    "lint-staged": "^13.2.0",
+    "lint-staged": "^13.1.0",
     "mocha": "^10.2.0",
     "nodemailer-mock": "^1.5.12",
     "plop": "^3.0.5",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.3",
     "rimraf": "^4.1.2",
     "supertest": "^6.2.2",
     "testcontainers": "^9.1.1",
     "ts-jest": "^29.0.5",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
+    "ts-loader": "~9.2.6",
+    "ts-node": "~10.4.0",
     "tsconfig-paths": "^4.1.2",
     "turbo": "^1.8.5",
-    "typescript": "^5.0.2"
+    "typescript": "~4.5.5"
   }
 }
