--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "@types/inline-css": "^3.0.1",
     "@types/jest": "^29.2.6",
     "@types/mocha": "^10.0.1",
-    "@types/node": "18.15.5",
+    "@types/node": "^18.15.5",
     "@types/nodemailer": "^6.4.4",
     "@types/pug": "^2.0.6",
     "@types/supertest": "^2.0.11",
@@ -132,10 +132,10 @@
     "supertest": "^6.2.2",
     "testcontainers": "^9.1.1",
     "ts-jest": "^29.0.5",
-    "ts-loader": "9.2.6",
-    "ts-node": "10.4.0",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
     "tsconfig-paths": "^4.1.2",
     "turbo": "^1.8.5",
-    "typescript": "4.5.5"
+    "typescript": "^4.5.5"
   }
 }
