--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -63,9 +63,7 @@ jobs:
           GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
 
       - name: "📦 Install Dependencies"
-        run: |
-          yarn install
-          npm list
+        run: yarn install
 
       - name: "💅 Lint"
         run: yarn lint
