--- a/packages/response-parser/package.json
+++ b/packages/response-parser/package.json
@@ -39,9 +39,11 @@
     "@nestjs/common": "^9.4.0",
     "@nestjs/core": "^9.4.0",
     "@nestjs/platform-express": "^9.4.0",
-    "@tresdoce-nestjs-toolkit/filters": "^0.1.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
+  },
+  "dependencies": {
+    "@tresdoce-nestjs-toolkit/filters": "^0.2.0"
   },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.2.4",
