--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -39,12 +39,14 @@
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
     "@nestjs/platform-express": "^10.3.8",
+    "bcrypt": "^5.1.1",
     "fast-redact": "^3.5.0",
     "luxon": "^3.4.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "fast-redact": "^3.5.0",
     "luxon": "^3.4.4"
   },
