--- a/packages/mailer/package.json
+++ b/packages/mailer/package.json
@@ -36,13 +36,13 @@
     "directory": "../../dist/mailer"
   },
   "peerDependencies": {
+    "@css-inline/css-inline": "^0.14.1",
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
     "@nestjs/platform-express": "^10.3.8",
     "ejs": "^3.1.2",
     "glob": "10.3.15",
     "handlebars": "^4.7.6",
-    "inline-css": "4.0.2",
     "mjml": "^4.14.0",
     "nodemailer": "6.9.13",
     "pug": "^3.0.1",
@@ -50,10 +50,10 @@
     "rxjs": "^7.8.1"
   },
   "dependencies": {
+    "@css-inline/css-inline": "^0.14.1",
     "ejs": "^3.1.2",
     "glob": "10.3.15",
     "handlebars": "^4.7.6",
-    "inline-css": "4.0.2",
     "mjml": "^4.14.0",
     "nodemailer": "6.9.13",
     "pug": "^3.0.1"
