--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -71,13 +71,13 @@ jobs:
         env:
           NODE_ENV: 'test'
 
-      - name: "📊 Publish Test Report"
-        uses: mikepenz/action-junit-report@v4
-        if: always()
-        with:
-          report_paths: '**/junit.xml'
+      #- name: "📊 Publish Test Report"
+      #  uses: mikepenz/action-junit-report@v4
+      #  if: always()
+      #  with:
+      #    report_paths: '**/junit.xml'
 
-      - name: "📊 Publish Test Report (new action)"
+      - name: "📊 Publish Test Report"
         uses: phoenix-actions/test-reporting@v8
         id: "test-report-${{ github.sha }}"
         if: success() || failure()
